deployment/frontend/game-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: game-ui
    application: game-ui
  name: game
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: game-ui
